<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="register">Register</string>
    <string name="logIn">Log In</string>
    <string name="userId">User id</string>
    <string name="firstName">First Name</string>
    <string name="lastName">Last Name</string>
    <string name="password">Password</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="sessionIsStarted">Session is started</string>
    <string name="userAlreadyExists">User already exists</string>
    <string name="passwordsDoNotMatch">Passwords do not match</string>
    <string name="registrationError">Registration failed</string>
    <string name="loginError">Error occurred at log in</string>
    <string name="wrongUserOrPassword">Wrong user name or password</string>
</resources>